manifests/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ghcr.io/purplecipher/preview-environment-k8s
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
