manifests/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svr
  labels:
    svr: app-svr
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: app
