manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sendit-ingress
  labels:
    app.resourceType: 'ingress'
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: sendit.ga
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-svr
                port:
                  number: 3000
